tests/invalid/data_loader_config_schema_violation.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "DataLoaderSourceSchemaViolation",
    "description": "Test case: data loader source field is a string instead of an object",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadConfig": {
      "kind": "grid",
      "source": "this_should_be_an_object_not_string",
      "variables": {
        "T": { "file_variable": "T", "units": "K" }
      }
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}
